Fix layout of tags on mobile.

--- a/tanolin/notes/templates/notes/inline-styles/note_list.css
+++ b/tanolin/notes/templates/notes/inline-styles/note_list.css
@@ -63,31 +63,9 @@
     margin: 10px 10px;
 }
 
-.note-text + .loc-list {
-    border-width: 1px 0 0 0;
-    border-style: solid;
-}
-
 .note-metadata {
     display: block;
     margin: 5px 10px;
     font-size: 13px;
     line-height: 1.25;
-}
-
-.note-tag-list {
-    display: contents;
-    margin: 5px 10px;
-    padding: 0;
-    font-size: 13px;
-    font-weight: 500;
-}
-
-.note-tag {
-    display: inline-block;
-    padding: 0 5px;
-    line-height: 1.5;
-    color: rgba(0, 0, 0, 0.5);
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 0.3em;
 }
