--- a/tanolin/notes/templates/notes/inline-styles/tag_list.css
+++ b/tanolin/notes/templates/notes/inline-styles/tag_list.css
@@ -1,7 +1,6 @@
 
 .tag-list {
     display: contents;
-    margin: 5px 10px 10px;
     padding: 0;
     font-size: 13px;
     font-weight: 500;
